--- a/styles/GetInTouch.module.css
+++ b/styles/GetInTouch.module.css
@@ -2,11 +2,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 8%;
+    padding: 6%;
     gap:10px;
     color: white;
-    background-color: rgb(0, 0, 0);
-    
+    background-color: rgba(6, 39, 84);
+    border-top: 2px solid rgb(135, 135, 135);
+}
+
+.heading{
+    font-size: 2rem;
+    text-transform: uppercase;
+}
+.details{
+    font-size: 1.2rem;
 }
 
 .madeby{
