--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -75,7 +75,7 @@
 
 .socialIcons {
     display: flex;
-    width: 10%;
+    width: 15%;
  
     justify-content: space-between;
 
@@ -86,6 +86,12 @@
     width: 100%;
     justify-content: center;
   
+}
+
+.aboutMeButton>button>a{
+    text-decoration: none;
+    color:black;
+
 }
 
 .aboutMeButton>button{
