Header made responsive

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -68,3 +68,12 @@
         width: 100%;
     }
 }
+
+@media  (max-width:768px)  {
+    .username{
+        display: none;
+    }
+    .navbar{
+        width: 100%;
+    }
+}
