--- a/styles/AboutUs.module.css
+++ b/styles/AboutUs.module.css
@@ -1,38 +1,60 @@
-.aboutMeSection{
+.aboutMeSection {
     display: flex;
     padding: 5%;
-    gap:5%;
+    gap: 5%;
     align-items: center;
     color: white;
     background-color: rgba(6, 39, 84);
     width: 100%;
     height: 100%;
-    
+
 }
-.myImage{
+
+.myImage {
     border-radius: 60%;
     overflow: hidden;
     width: 50%;
 }
 
-.profileimage{
+.profileimage {
     width: 100%;
     height: 100%;
 }
 
-.AboutMe{
+.AboutMe {
     width: 50%;
     height: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
     align-content: center;
-    gap:2%;
-   
+    gap: 2%;
+
     padding: 4%;
 }
 
-.aboutMeHeading{
+.aboutMeHeading {
     font-size: 3rem;
     letter-spacing: 0.1cap;
+}
+
+@media (max-width:768px) {
+    .aboutMeSection {
+        flex-direction: column;
+        padding-top: 20%;
+    }
+
+    .AboutMe {
+        width: 90%;
+
+    }
+
+    .AboutMe>p {
+        text-align: center;
+    }
+
+    .aboutMeHeading{
+        font-size: 2rem;
+        letter-spacing: 0.2cap;
+    }
 }
