--- a/styles/Experience.module.css
+++ b/styles/Experience.module.css
@@ -101,6 +101,10 @@
 @media screen and (max-width: 760px) {
     .experience {
         flex-direction: column;
+        padding: 2%;
+    }
+    .container{
+        padding-top: 10%;
     }
 
     .techstack {
@@ -118,6 +122,7 @@
 
     .history {
         width: 100%;
+        margin-top: 10%;
     }
 
     .jobdetails {
