--- a/styles/GetInTouch.module.css
+++ b/styles/GetInTouch.module.css
@@ -15,15 +15,15 @@
 }
 .details{
     font-size: 1.2rem;
+    text-align: center;
 }
 
 .madeby{
     display: flex;
-    align-content: center;
     padding: 2%;
     width: 30%;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: center;
+    align-content: center;
 }
 
 .username{
@@ -37,4 +37,8 @@
 
 .invert{
     filter: invert();
+}
+
+@media (max-width:768px) {
+    
 }
