--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -44,7 +44,7 @@
 
 .progress_container {
     width: 100%;
-    background-color:transparent;
+    background-color: transparent;
     border-radius: 25px;
 
     overflow: hidden;
@@ -59,6 +59,18 @@
     animation: loadAnimation 7s forwards infinite;
 }
 
+.navbar_dropdown {
+    height: 30px;
+    background-color: white;
+    border-radius: 25px;
+    cursor: pointer;
+}
+.username>a{
+    text-decoration: none;
+    color: black;
+    font-weight: 700;
+
+}
 @keyframes loadAnimation {
     from {
         width: 0;
@@ -69,11 +81,29 @@
     }
 }
 
-@media  (max-width:768px)  {
-    .username{
-        display: none;
+@media (max-width:768px) {
+    .headersection {
+        padding-inline: 4%;
     }
-    .navbar{
+
+    .navbar {
+        width: 80%;
+        padding: 15%;
+       
+        top: 0;
+        right:10;
+        position: absolute;
+        flex-direction: column;
+        align-content: center;
+        background-color: rgba(232, 180, 180, 0.9);
+
+        border-radius: 25px;
+    }
+
+    .navbar>p {
+        font-size: 1rem;
+        margin: 5%;
         width: 100%;
+        letter-spacing: 0.4cap;
     }
 }
